[package]
name = "cukurova-yemekhane"
version = "1.0.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
actix-macros = "0.2.4"
chrono = "0.4"
futures = "0.3"
once_cell = "1.8.0"
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
vercel_runtime = "1"